peppermint/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peppermint
  namespace: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: peppermint
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: peppermint
    spec:
      containers:
        - name: peppermint
          image: pepperlabs/peppermint:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5001
              name: http
              protocol: TCP
