peppermint/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peppermint
  namespace: inventory
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: peppermint
  type: ClusterIP
